crates/ty_python_semantic/resources/mdtest/snapshots/unsafe_tuple_subclas…_-_Unsafe_Tuple_Subclas…_-_`__bool__`_(79170cfc5495ebe2).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsafe_tuple_subclass.md - Unsafe Tuple Subclass - `__bool__`
mdtest path: crates/ty_python_semantic/resources/mdtest/unsafe_tuple_subclass.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class A(tuple):
 2 |     # error: [unsafe-tuple-subclass]
 3 |     def __bool__(self):
 4 |         return False
 5 | 
 6 | class B(tuple):
 7 |     # error: [unsafe-tuple-subclass]
 8 |     __bool__ = None
 9 | 
10 | class C(tuple):
11 |     # error: [unsafe-tuple-subclass]
12 |     __bool__ = lambda self: False
13 | 
14 | class D(tuple): ...
15 | 
16 | class E(D):
17 |     # error: [unsafe-tuple-subclass]
18 |     def __bool__(self):
19 |         return False
```

# Diagnostics

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
 --> src/mdtest_snippet.py:3:9
  |
1 | class A(tuple):
2 |     # error: [unsafe-tuple-subclass]
3 |     def __bool__(self):
  |         ^^^^^^^^^^^^^^
4 |         return False
  |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:8:5
   |
 6 | class B(tuple):
 7 |     # error: [unsafe-tuple-subclass]
 8 |     __bool__ = None
   |     ^^^^^^^^^^^^^^^
 9 |
10 | class C(tuple):
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:12:5
   |
10 | class C(tuple):
11 |     # error: [unsafe-tuple-subclass]
12 |     __bool__ = lambda self: False
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
13 |
14 | class D(tuple): ...
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```

```
warning[unsafe-tuple-subclass]: Unsafe override of method `__bool__` in a subclass of `tuple`
  --> src/mdtest_snippet.py:18:9
   |
16 | class E(D):
17 |     # error: [unsafe-tuple-subclass]
18 |     def __bool__(self):
   |         ^^^^^^^^^^^^^^
19 |         return False
   |
help: Overriding method `__bool__` in a subclass of `tuple` can cause unexpected behavior
info: rule `unsafe-tuple-subclass` is enabled by default

```
